# GameAnHour

./: .gitignore  bundle.cmd  index.html  package.json  tsconfig.json  webpack.config.js
engine/: CMakeLists.txt  FrameRenderer.go  graphics.go  jsBootstrap.go  jsEngine.go  jsEpic.go  jsFrameRenderer.go  jsReducer.go  main.go
engine/cpp/: .gitignore  CMakeLists.txt  index.js
engine/cpp/buildscripts/: acquire.cmd  compile-debug.cmd  compile-release.cmd  compile.cmd  mingw32-acquire.cmd  mingw32-compile-debug.cmd  mingw32-compile-release.cmd  mingw32-compile.cmd  vs2017-acquire.cmd  vs2017-compile-debug.cmd  vs2017-compile-release.cmd  vs2017-compile.cmd
engine/cpp/ext/: acquire-box2d.cmd  acquire-duktape.cmd  acquire-sfml.bat  acquire-sfml.cmd  acquire.cmd  mingw32-acquire-box2d.cmd  mingw32-acquire-duktape.cmd  mingw32-acquire-sfml.cmd  mingw32-acquire.cmd  mingw32-x64-acquire-sfml.cmd  prepare.cmd  vs2017-acquire-box2d.cmd  vs2017-acquire-chakracore.cmd  vs2017-acquire-duktape.cmd  vs2017-acquire-sfml.cmd  vs2017-acquire.cmd  vs2017-box2d-mt.ps1  vs2017-x64-acquire-sfml.cmd  vs2017-x64-acquire.cmd
engine/cpp/js/: sfml.js
engine/cpp/src/: main.cpp
engine/cpp/src/Javascript/: Box2dExtensions.cpp  Box2dExtensions.hpp  ChakraJavascriptEngine.cpp  ConsoleExtensions.cpp  DukJavascriptEngine.cpp  DukJavascriptEngine.hpp  JavascriptEngine.cpp  JavascriptEngine.hpp  ReduxExtensions.cpp  ReduxExtensions.hpp  SfmlExtensions.cpp  SfmlExtensions.hpp  TimerExtensions.cpp  TimerExtensions.hpp
engine/cpp/src/Profile/: Profiler.cpp  Profiler.hpp
engine/ext/: mingw32-x64-acquire.cmd
engine/go/: graphics.go  jsFrameRenderer.go  main.go
engine/src/: main.cpp
js/: README.md  package.json  tsconfig.json  webpack.config.js
js/src/: index.ts
src/: engine.ts  index.ts  sfml.d.ts  test.ts
src/core/: App.constructor.ts  App.ts  extensions.ts  main.html.ts  main.sdl.ts  main.ts
src/entity-component/: component-eventsource.type.ts  component-eventtransformer.type.ts  component-reducable.type.ts  component-render.type.ts  component-value.type.ts  component.type.ts  create-entities-state-map.func.ts  create-entity-reducer.func.ts  entities.state.ts  entity-base.type.ts  entity-component-flipper.func.ts  entity-component.actions.ts  entity-component.epic.ts  entity-component.reducer.ts  entity-component.render.ts  entity-component.tick.ts  entity.type.ts
src/functional/: ReduxApp.function.ts  ReduxApp.type.ts  app.actions.ts  create-reducer.func.ts  frame.model.ts  generic.action.ts  maybe.spec.ts  pattern-match.ts  redux.app.ts  render-frame.function.ts  render-frame.model.ts  render.function.ts  run.function.ts  (+6 more)
(+380 files in other folders)
